# modapts-v2-demo

./: .env.example  .gitignore  README.md  index.html  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: classify.py  feedback.py
api/modapts/: __init__.py  validator.py
modapts/: adapter.py  classifier.py  dictionary.py  feedback.py  storage.py  validator.py
src/: App.jsx  index.css
src/components/: DetailExpansion.jsx  InputBar.jsx  ResultsTable.jsx  SettingsPanel.jsx
tests/: test_classifier.py  test_dictionary.py  test_feedback.py  test_integration.py  test_storage.py  test_validator.py
